--- a/small_n_stats_WPF/small_n_stats_WPF/Properties/Resources.resx
+++ b/small_n_stats_WPF/small_n_stats_WPF/Properties/Resources.resx
@@ -151,4 +151,10 @@
   <data name="License_Beezdemand" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\License_Beezdemand.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="GraphingExponential" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GraphingExponential.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="GraphingExponentiated" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GraphingExponentiated.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
