--- a/small_n_stats_WPF/small_n_stats_WPF/Properties/Resources.resx
+++ b/small_n_stats_WPF/small_n_stats_WPF/Properties/Resources.resx
@@ -157,4 +157,7 @@
   <data name="GraphingExponentiated" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GraphingExponentiated.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="SteinSystematicCheck" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SteinSystematicCheck.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
