--- a/small_n_stats_WPF/small_n_stats_WPF/Properties/Resources.resx
+++ b/small_n_stats_WPF/small_n_stats_WPF/Properties/Resources.resx
@@ -160,4 +160,10 @@
   <data name="SteinSystematicCheck" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SteinSystematicCheck.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="ExponentialDemandFunctionsKFitted" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ExponentialDemandFunctionsKFitted.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="ExponentiatedDemandFunctionsKFitted" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ExponentiatedDemandFunctionsKFitted.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
