--- a/small_n_stats_WPF/small_n_stats_WPF/Properties/Resources.resx
+++ b/small_n_stats_WPF/small_n_stats_WPF/Properties/Resources.resx
@@ -166,4 +166,10 @@
   <data name="ExponentiatedDemandFunctionsKFitted" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ExponentiatedDemandFunctionsKFitted.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="ExponentialDemandFunctionsKSet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ExponentialDemandFunctionsKSet.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="ExponentiatedDemandFunctionKSet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ExponentiatedDemandFunctionKSet.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
