--- a/small_n_stats_WPF/small_n_stats_WPF/Properties/Resources.resx
+++ b/small_n_stats_WPF/small_n_stats_WPF/Properties/Resources.resx
@@ -172,4 +172,10 @@
   <data name="ExponentiatedDemandFunctionKSet" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ExponentiatedDemandFunctionKSet.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="License_base64enc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\License_base64enc.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="License_EPPlus" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\License_EPPlus.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
