--- a/small_n_stats_WPF/small_n_stats_WPF/Properties/Resources.resx
+++ b/small_n_stats_WPF/small_n_stats_WPF/Properties/Resources.resx
@@ -181,4 +181,10 @@
   <data name="License_SharpVectorGraphics" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\License_SharpVectorGraphics.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="GraphingExponentialFaceted" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GraphingExponentialFaceted.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="GraphingExponentiatedFaceted" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GraphingExponentiatedFaceted.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
