--- a/small_n_stats_WPF/small_n_stats_WPF/Properties/Resources.resx
+++ b/small_n_stats_WPF/small_n_stats_WPF/Properties/Resources.resx
@@ -118,76 +118,82 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="License_ggplot2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\License_ggplot2.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="ExponentialDemandScoring" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ExponentialDemandScoring.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="License_GNOME_icons" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\License_GNOME_icons.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="ExponentialDemandScoringFitted" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ExponentialDemandScoringFitted.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="License_R" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\License_R.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="ExponentialDemandScoringSet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ExponentialDemandScoringSet.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="License_RdotNet" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\License-RdotNet.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="ExponentiatedDemandScoring" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ExponentiatedDemandScoring.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="SNS" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SNS.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="ExponentiatedDemandScoringFitted" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ExponentiatedDemandScoringFitted.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="ExponentialDemandFunctions" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\DemandFunctions.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="ExponentiatedDemandScoringSet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ExponentiatedDemandScoringSet.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="ExponentiatedDemandFunctions" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ExponentiatedDemandFunctions.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="GraphingAggregateExponentialBasic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GraphingAggregateExponentialBasic.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="License_nlmrt" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\License_nlmrt.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="License_nlstools" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\License_nlstools.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="LICENSE" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\LICENSE.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="License_Beezdemand" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\License_Beezdemand.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="GraphingAggregateExponentiatedBasic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GraphingAggregateExponentiatedBasic.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="GraphingExponential" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\GraphingExponential.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="GraphingExponentiated" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\GraphingExponentiated.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="SteinSystematicCheck" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SteinSystematicCheck.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="ExponentialDemandFunctionsKFitted" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ExponentialDemandFunctionsKFitted.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="ExponentiatedDemandFunctionsKFitted" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ExponentiatedDemandFunctionsKFitted.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="ExponentialDemandFunctionsKSet" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ExponentialDemandFunctionsKSet.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="ExponentiatedDemandFunctionKSet" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ExponentiatedDemandFunctionKSet.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="License_base64enc" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\License_base64enc.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="License_EPPlus" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\License_EPPlus.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="License_SharpVectorGraphics" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\License_SharpVectorGraphics.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+    <value>..\resources\graphingexponential.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="GraphingExponentialFaceted" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\GraphingExponentialFaceted.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+    <value>..\resources\graphingexponentialfaceted.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="GraphingExponentiated" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\graphingexponentiated.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="GraphingExponentiatedFaceted" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\GraphingExponentiatedFaceted.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+    <value>..\resources\graphingexponentiatedfaceted.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="CurveFitting" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\CurveFitting.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  <data name="LICENSE" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\license.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="License_base64enc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\license_base64enc.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="License_Beezdemand" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\license_beezdemand.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="License_EPPlus" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\license_epplus.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="License_ggplot2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\license_ggplot2.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="License_GNOME_icons" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\license_gnome_icons.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="License_nlmrt" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\license_nlmrt.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="License_nlstools" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\license_nlstools.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="License_R" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\license_r.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="License_RdotNet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\license-rdotnet.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="License_SharpVectorGraphics" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\license_sharpvectorgraphics.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="SteinSystematicCheck" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\steinsystematiccheck.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="GraphingAggregateExponentialFaceted" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GraphingAggregateExponentialFaceted.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="GraphingAggregateExponentiatedFaceted" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GraphingAggregateExponentiatedFaceted.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
 </root>
