--- a/small_n_stats_WPF/small_n_stats_WPF/AUTHORS
+++ b/small_n_stats_WPF/small_n_stats_WPF/AUTHORS
@@ -14,9 +14,9 @@ The RdotNet Community Program is licensed under the new BSD License (2-Clause), 
 	You can visit the RdotNet Community program website here:
 	http://rdotnet.codeplex.com/
 
-The EPPlus program is licensed under the GPL, version 2, Copyright (c) 2016 Jan Källman
-	You can visit the EPPlus program website here:
-	http://epplus.codeplex.com/
+The Reogrid program is licensed under the MIT License, Copyright(c) 2013-2016 Jing<lujing at unvell.com>, Copyright(c) 2013-2016 unvell.com, All rights reserved.
+	You can visit the Reogrid program website here:
+	https://reogrid.net/
 
 The nlmrt R Package is licensed under the GPL, version 2, Copyright (C) 2016. John C. Nash
 	You can visit the nlmrt package website here:
