--- a/small_n_stats_WPF/small_n_stats_WPF/Properties/Resources.resx
+++ b/small_n_stats_WPF/small_n_stats_WPF/Properties/Resources.resx
@@ -124,9 +124,6 @@
   <data name="License_Beezdemand" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\license_beezdemand.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="License_EPPlus" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\license_epplus.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
   <data name="License_GNOME_icons" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\license_gnome_icons.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
@@ -213,5 +210,8 @@
   </data>
   <data name="WorkItemQueryNodeOffline_11949" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WorkItemQueryNodeOffline_11949.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="License_Reogrid" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\License_Reogrid.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
 </root>
